fixed drawer with use effect

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
     "zustand": "^4.3.7"
