added map to destination

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.4.0",
     "better-react-carousel": "^1.1.1",
     "js-cookie": "^3.0.5",
+    "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
     "zustand": "^4.3.7"
